fix: label title gap

--- a/plot/ruler/hor/hor.view.css
+++ b/plot/ruler/hor/hor.view.css
@@ -1,15 +1,7 @@
-[mol_plot_ruler_hor_curve] {
-	color: var(--mol_theme_line);
-	stroke-width: .1%;
-	stroke: currentColor;
-}
-
 [mol_plot_ruler_hor_label] {
-	color: var(--mol_theme_text);
 	transform: translateY( -4px );
 }
 
 [mol_plot_ruler_hor_title] {
-	color: var(--mol_theme_shade);
 	transform: translateY( -4px );
 }
